# NFIQ2_ANdy

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/aug5/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/aug5/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/aug5/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
